Initialize OAuth2 authorization server

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Flyway
 spring.flyway.Locations=classpath:db/migration
@@ -18,3 +19,19 @@ spring.flyway.Locations=classpath:db/migration
 # Envers
 spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_ aud
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+
+spring.datasource.hikari.minimumIdle=10
+spring.datasource.hikari.maximumPoolSize=100
+spring.datasource.hikari.connectionTestQuery=SELECT 1
+spring.datasource.hikari.maxLifetime=180000
+user.timezone=UTC
+
+server.port=8080
+spring.security.oauth2.authorizationserver.issuer=http://localhost:8080
+spring.security.oauth2.authorizationserver.token.authorization-code-time-to-live=10m
+spring.security.oauth2.authorizationserver.token.access-token-time-to-live=1h
+spring.security.oauth2.authorizationserver.token.refresh-token-time-to-live=7d
+spring.security.oauth2.authorizationserver.token.reuse-refresh-tokens=false
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.oauth2=DEBUG
