Add swagger for API doc

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -28,10 +28,18 @@ user.timezone=UTC
 
 server.port=8080
 spring.security.oauth2.authorizationserver.issuer=http://localhost:8080
-spring.security.oauth2.authorizationserver.token.authorization-code-time-to-live=10m
-spring.security.oauth2.authorizationserver.token.access-token-time-to-live=1h
-spring.security.oauth2.authorizationserver.token.refresh-token-time-to-live=7d
+spring.security.oauth2.authorizationserver.token.authorization-code-time-to-live=10
+spring.security.oauth2.authorizationserver.token.access-token-time-to-live=1
+spring.security.oauth2.authorizationserver.token.refresh-token-time-to-live=7
 spring.security.oauth2.authorizationserver.token.reuse-refresh-tokens=false
 
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.oauth2=DEBUG
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.configUrl=/v3/api-docs/swagger-config
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.filter=true
+springdoc.packages-to-scan=com.tdbang.crm.controllers
+springdoc.show-oauth2-endpoints=true
+
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.oauth2=DEBUG
