Update cors policy and add config to properties

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -27,11 +27,14 @@ spring.datasource.hikari.maxLifetime=180000
 user.timezone=UTC
 
 server.port=8080
-spring.security.oauth2.authorizationserver.issuer=http://localhost:8080
-spring.security.oauth2.authorizationserver.token.authorization-code-time-to-live=10
-spring.security.oauth2.authorizationserver.token.access-token-time-to-live=1
-spring.security.oauth2.authorizationserver.token.refresh-token-time-to-live=7
-spring.security.oauth2.authorizationserver.token.reuse-refresh-tokens=false
+spring.security.oauth2.authorization-server.issuer=http://localhost:8080
+authorization-server.client.id=crm-app
+authorization-server.client.secret={noop}secret
+spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200/
+spring.security.oauth2.authorization-server.token.authorization-code-time-to-live=10
+spring.security.oauth2.authorization-server.token.access-token-time-to-live=1
+spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=7
+authentication.cors.allowed.urls=http://localhost:4200
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
