Update oauth2 redirect uri

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -30,7 +30,7 @@ server.port=8080
 spring.security.oauth2.authorization-server.issuer=http://localhost:8080
 authorization-server.client.id=crm-app
 authorization-server.client.secret={noop}secret
-spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200/
+spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200
 spring.security.oauth2.authorization-server.token.authorization-code-time-to-live=10
 spring.security.oauth2.authorization-server.token.access-token-time-to-live=1
 spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=7
