Update to store info of OAuth2 server in database

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -28,6 +28,7 @@ user.timezone=UTC
 
 server.port=8080
 spring.security.oauth2.authorization-server.issuer=http://localhost:8080
+authorization-server.jwk-source.kid=default-key
 authorization-server.client.id=crm-app
 authorization-server.client.secret={noop}secret
 spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200
