--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=crm-services
+spring.application.name=CRM-SERVICE
 spring.application.version=v1.0.0
 spring.config.import=file:./crm-services.properties
