--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
@@ -37,10 +37,6 @@ spring.security.oauth2.authorization-server.token.access-token-time-to-live=1
 spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=7
 authentication.cors.allowed.urls=http://localhost:4200
 
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.configUrl=/v3/api-docs/swagger-config
-springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.filter=true
 springdoc.packages-to-scan=com.tdbang.crm.controllers
 springdoc.show-oauth2-endpoints=true
