Override OAuth2 login template and add populate_data file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=CRM-SERVICE
 spring.application.version=v1.0.0
 spring.config.import=file:./crm-services.properties
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+# Static resources (CSS, JS, images)
+spring.web.resources.static-locations=classpath:/static/
