--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -27,6 +27,8 @@ spring.datasource.hikari.maxLifetime=180000
 user.timezone=UTC
 
 server.port=8080
+
+# Oauth2 server properties
 spring.security.oauth2.authorization-server.issuer=http://localhost:8080
 authorization-server.jwk-source.kid=default-key
 authorization-server.client.id=crm-app
@@ -37,9 +39,15 @@ spring.security.oauth2.authorization-server.token.access-token-time-to-live=1
 spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=7
 authentication.cors.allowed.urls=http://localhost:4200
 
+# Swagger properties
 springdoc.swagger-ui.filter=true
 springdoc.packages-to-scan=com.tdbang.crm.controllers
 springdoc.show-oauth2-endpoints=true
 
+# Socket.IO properties
+socketio.port=9092
+socketio.ping.interval=60000
+socketio.ping.timeout=120000
+socketio.ui.host=http://localhost:4200
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.oauth2=DEBUG
