--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -49,5 +49,7 @@ socketio.port=9092
 socketio.ping.interval=60000
 socketio.ping.timeout=120000
 socketio.ui.host=http://localhost:4200
+
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.oauth2=DEBUG
+crm.contact.profile=pk,contactName,mobilePhone,email,organization,address,description,createdOn,updatedOn
