Update duration configs for OAuth2 service to use one unit

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -34,9 +34,10 @@ authorization-server.jwk-source.kid=default-key
 authorization-server.client.id=crm-app
 authorization-server.client.secret={noop}secret
 spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200
+# token-time-to-live in minutes
 spring.security.oauth2.authorization-server.token.authorization-code-time-to-live=10
-spring.security.oauth2.authorization-server.token.access-token-time-to-live=1
-spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=7
+spring.security.oauth2.authorization-server.token.access-token-time-to-live=60
+spring.security.oauth2.authorization-server.token.refresh-token-time-to-live=10080
 authentication.cors.allowed.urls=http://localhost:4200
 
 # Swagger properties
