Update OpenApi Configuration to support Authentication in Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=CRM-SERVICE
-spring.application.version=v1.0.0
+spring.application.version=1.0.0
 spring.config.import=file:./crm-services.properties
 # Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
