--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -31,6 +31,11 @@ server.port=8080
 # Oauth2 server properties
 spring.security.oauth2.authorization-server.issuer=http://localhost:8080
 authorization-server.jwk-source.kid=default-key
+# For Swagger
+authorization-server.swagger-client.id=swagger-ui
+authorization-server.swagger-client.secret={noop}swagger-secret
+spring.security.oauth2.authorization-server.swagger-redirect-uri=http://localhost:8080/swagger-ui/oauth2-redirect.html
+# For UI
 authorization-server.client.id=crm-app
 authorization-server.client.secret={noop}secret
 spring.security.oauth2.authorization-server.redirect-uri=http://localhost:4200
