Add spring actuator to monitor app's health

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -56,5 +56,8 @@ socketio.ping.interval=60000
 socketio.ping.timeout=120000
 socketio.ui.host=http://localhost:4200
 
+management.endpoints.web.exposure.include=health,info,caches
+management.endpoint.health.show-details=always
+
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.oauth2=DEBUG
