--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>com.tdbang</groupId>
 	<artifactId>crm-services</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>crm-services</name>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>CRM-SERVICE</name>
 	<description>CRM project in Spring Boot</description>
 	<url/>
 	<licenses>
@@ -71,6 +71,10 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -144,6 +148,13 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
