--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -13,6 +13,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+# Mongo
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=crm_db
+spring.data.mongodb.auto-index-creation=true
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root125p
+
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
+
 # Flyway
 spring.flyway.Locations=classpath:db/migration
 
@@ -55,6 +68,14 @@ socketio.port=9092
 socketio.ping.interval=60000
 socketio.ping.timeout=120000
 socketio.ui.host=http://localhost:4200
+
+# Mail config
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=<Login User to SMTP server>
+spring.mail.password=<Login password to SMTP server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 management.endpoints.web.exposure.include=health,info,caches
 management.endpoint.health.show-details=always
