--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/crm_db?useUnicode=true&characterEncoding=UTF-8&nullDatabaseMeansCurrent=true&databaseTerm=SCHEMA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root125p
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -70,15 +70,24 @@ socketio.ping.timeout=120000
 socketio.ui.host=http://localhost:4200
 
 # Mail config
-spring.mail.host=smtp.example.com
-spring.mail.port=587
-spring.mail.username=<Login User to SMTP server>
-spring.mail.password=<Login password to SMTP server>
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.example.com
+#spring.mail.port=587
+#spring.mail.username=<Login User to SMTP server>
+#spring.mail.password=<Login password to SMTP server>
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+# MailDev local testing config (remove when deploy)
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
 
 management.endpoints.web.exposure.include=health,info,caches
 management.endpoint.health.show-details=always
 
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.oauth2=DEBUG
+#spring.mail.properties.mail.debug=true
