Prepare for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=CRM-SERVICE
 spring.application.version=1.0.0
+
+# Profile activation - use 'prod' on Render, local file for development
+spring.profiles.active=prod
+
+# Development config import (only for local)
+spring.config.activate.on-profile=dev
 spring.config.import=file:./crm-services.properties
+
 # Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
