Implement auditing feature to track revision

--- a/src/main/resources/crm-services.properties
+++ b/src/main/resources/crm-services.properties
@@ -30,8 +30,10 @@ spring.servlet.multipart.enabled=true
 spring.flyway.Locations=classpath:db/migration
 
 # Envers
-spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_ aud
+spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_aud
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+spring.jpa.properties.org.hibernate.envers.revision_field_name=rev
+spring.jpa.properties.org.hibernate.envers.revision_type_field_name=rev_type
 
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=100
